# hydrogen-trading

./: '  .dockerignore  Dockerfile  fly.toml
tax_credit_model/: Cargo.toml  Dockerfile  Makefile.toml  package-lock.json  package.json  test_env.toml
tax_credit_model/assets/scripts/: histogram.js  lib.js  time-series-chart.js
tax_credit_model/assets/styles/: main.css
tax_credit_model/src/: data_retriever.rs  lib.rs  main.rs  server.rs
tax_credit_model/src/catchers/: mod.rs  not_found_catcher.rs  unauthorized_catcher.rs
tax_credit_model/src/client/: events.rs  htmx.rs  mod.rs
tax_credit_model/src/components/: badge.rs  button.rs  component.rs  electrolyzer.rs  error.rs  event.rs  form_field.rs  histogram.rs  icon.rs  input.rs  mod.rs  page.rs  select.rs  simulation.rs  time_series.rs
tax_credit_model/src/concurrency/: mutex.rs
tax_credit_model/src/file_systems/: directory.rs  file.rs  metadata.rs  mod.rs  permission.rs
tax_credit_model/src/files/: file_system.rs
tax_credit_model/src/handlers/: close_error_handler.rs  create_electrolyzer_form_handler.rs  create_electrolyzer_handler.rs  create_electrolyzer_page_handler.rs  create_simulation_handler.rs  electrolyzer_selector_handler.rs  execute_simulation_handler.rs  fetch_emissions_handler.rs  fetch_energy_costs_handler.rs  (+16 more)
tax_credit_model/templates/: base.html  create_electrolyzer_template.html  execute_simulation.html  simulation.html
tax_credit_model/tests/: create_electrolyzer_test.rs  executate_simulation_test.rs  execute_simulation_test.rs  file_system_test.rs  generation_persistance_test.rs
(+121 files in other folders)
