# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "tax_credit_model_server"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
tokio = { version = "1.29.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.4.2"
serde_json = "1.0.104"
chrono = "0.4.28"
askama = { version = "0.12.0", features = ["serde-json"] }
serde_urlencoded = "0.7"
serde_qs = "0.7"
pretty_assertions = "1.4.0"
calamine = "0.22.0"
tokio-postgres = { version = "0.7.10", features = ["with-serde_json-1"] }
futures-util = "0.3.28"
nanoid = "0.4.0"
postgres-derive = "0.4.5"
postgres-types = { version = "0.2.6", features = ["derive"] }
